// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hello1.4gl 1`] = `
main 
  display "hello "
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
MAIN 
  DISPLAY 'hello '
END MAIN


`;

exports[`hello2.4gl 1`] = `
main 

  define nome char(50) # abc
  define big_field char(1234) # abc
  prompt "digite seu nome : " for nome
  
  call fgl_winmessage( "hello",nome, "info")
  
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
MAIN 

  DEFINE nome CHAR ( 50 )  # abc
  DEFINE big_field CHAR ( 1234 )  # abc
  PROMPT 'digite seu nome : ' FOR nome
  
  CALL fgl_winmessage ( 'hello', nome, 'info' ) 
  
END MAIN


`;

exports[`hello3.4gl 1`] = `
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;
